syntax = "proto3";

package CONVERSATIONS_PACKAGE;

service ConversationsService {
  rpc FindOneConversation (FindOneConversationDto) returns (Conversation);
}

message Conversation {
  int32 id = 1;
  int32 creatorId = 2;
  string name = 3;
  bool isGroup = 4;
  string createdAt = 5;
}

message FindOneConversationDto {
  int32 conversationId = 1;
  int32 userId = 2;
}
